# VidSnatch

./: .gitignore  CLAUDE.md  Dockerfile  MCP_HTTP_README.md  MCP_README.md  README.md  USAGE.md  error.txt  mcp_config.json  mcp_config.py  mcp_http_server.py  mcp_server.py  mcp_tools.py  pyproject.toml  requirements.txt  rm.toml  run_dev.py  test_transcript.py  web_app.py
.claude/commands/: release.md
.github/: copilot-instructions.md
.github/workflows/: publish.yml
examples/: claude_desktop_config_docker.json  claude_desktop_config_http.json  claude_desktop_config_python.json  claude_desktop_config_remote.json
skills/vidsnatch/: SKILL.md
src/: cli.py  downloader.py  installer.py  logger.py  main.py  mcp_config.json  mcp_config.py  mcp_http_server.py  mcp_server.py  mcp_tools.py  utils.py  web_app.py
src/skills/vidsnatch/: SKILL.md
src/static/: index.html
static/: index.html
tests/: test_transcript.py
youtube_downloader/: __init__.py  __main__.py  downloader.py
