[project]
name = "vidsnatch"
version = "0.1.0"
description = "VidSnatch - Futuristic YouTube video downloader with web interface"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytubefix>=9.4.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "youtube-transcript-api>=0.6.2",
    "mcp>=1.12.0,<2.0.0",
]

[project.scripts]
vidsnatch = "src.main:main"
vidsnatch-web = "web_app:main"
vidsnatch-mcp = "mcp_server:main"
vidsnatch-mcp-http = "mcp_http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
