[project]
name = "vidsnatch"
version = "0.1.5"
description = "VidSnatch - YouTube video/audio/transcript downloader with CLI, Web UI, and MCP support"
authors = [
    {name = "sahajamit"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["youtube", "downloader", "mcp", "cli", "video", "audio", "transcript"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]
dependencies = [
    "pytubefix>=9.4.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "youtube-transcript-api>=0.6.2",
    "mcp>=1.12.0,<2.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/sahajamit/VidSnatch"
Repository = "https://github.com/sahajamit/VidSnatch"

[project.scripts]
vidsnatch = "src.cli:main"
vidsnatch-web = "src.web_app:main"
vidsnatch-mcp = "src.mcp_server:main"
vidsnatch-mcp-http = "src.mcp_http_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
